--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1><b>Abhijit</b> Nandy</h1>
+			<h1><b>abhijit</b> nandy</h1>
 			<hr>
 			YOUR TITLE (EX: SOFTWARE ENGINEERING STUDENT)
 			<hr>
